# vector

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  demo.py  meta.py  pyproject.toml  requirements.txt
.github/workflows/: build-package.yml
application/: __init__.py  vector_db.py
infrastructure/storage/: file_storage.py
src/vector_datalib/application/: main.py
src/vector_datalib/application/services/: cache_service.py  coordinate_service.py
src/vector_datalib/domain/coordinates/: central_axis.py  vector_point.py
src/vector_datalib/domain/mappings/: coordinate_mapping.py
src/vector_datalib/domain/spaces/: dimensional_space.py
src/vector_datalib/infrastructure/storage/: file_storage.py
src/vector_db/application/: main.py
src/vector_db/application/services/: cache_service.py  coordinate_service.py
src/vector_db/domain/coordinates/: central_axis.py
src/vector_db/domain/mappings/: coordinate_mapping.py
src/vector_db/domain/spaces/: dimensional_space.py
