[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-db"
dynamic = ["version"]
description = "VECTOR: N-dimensional coordinate database with O(1) lookups"

readme = "README.md"
authors = [{name = "Domas Leščinskas", email = "domas.lescinskas@gmail.com"}]
license = {text = "Apache-2.0"}

keywords = ["database", "vector", "coordinates", "dimensions", "lookup", "fast"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Mathematics",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",
]

requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

test = [
    "pytest>=6.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/domasles/vector"
"Bug Reports" = "https://github.com/domasles/vector/issues"
Source = "https://github.com/domasles/vector"
Documentation = "https://github.com/domasles/vector#readme"

[tool.setuptools.dynamic]
version = {attr = "vector.__version__"}

[tool.setuptools.packages.find]
include = ["vector*"]
